# ise-project

./: .env.example  README.md  demo.py  main.py  pyproject.toml  test_api.py
app/: __init__.py
app/api/: __init__.py  access_logs.py  auth.py  gateways.py  permissions.py  reports.py  users.py
app/core/: __init__.py  config.py
app/models/: __init__.py  access_log.py  gateway.py  permission.py  report.py  session.py  user.py
app/services/: __init__.py  database.py  gateway_comm_service.py  permission_manager.py  session_manager.py  webinterface.py
